@@ -3,6 +3,7 @@
   kfGetWikiData functions now return the 'url' property as protocol-relative.
   A new 'canonical_url' property was added that still contains a full url including protocol
   (canonical url have the http-protocol, which matches the canonical url WMF uses).
+* Droppping default attributes for <link> and <script>. We're using HTML5 structure.
 
 == 0.2.1 (2012-01-29) ==
 * (JIRA KRINKLE-6) Use Toolserver Intuition instance to determine <html dir>
